--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>{{ page.title }}</title>
 		<meta name="author" content="Alex O'Callaghan" />
+		<link rel="stylesheet" href="/css/style.css" />
 	</head>
 
 	<body>
