--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,21 @@
 * { margin: 0 auto; }
+html, body {
+	height: 100%;
+}
 body {
 	font-family: Arial;
 	font-size: 12px;
 	background: #D4D6D6;
 }
-
+.wrapper {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -45px;
+}
+footer, .push {
+	height: 45px;
+}
 .container { width: 960px; }
 
 header {
@@ -21,9 +32,13 @@ nav {
 	line-height: 45px;
 	background: #3C3D3D;
 }
+nav ul {
+	margin: 0;
+}
 nav li {
 	display: inline;
 	list-style: none;
+	padding: 15px;
 }
 nav li a:link, nav li a:visited {
 	color: #FFF;
@@ -35,4 +50,9 @@ nav li a:hover, nav li a:active {
 
 #content {
 	background: #FFF;
+	padding: 10px;
+}
+
+footer {
+	line-height: 45px;
 }
