--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,10 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>{{ page.title }}</title>
 		<meta name="author" content="Alex O'Callaghan" />
+		<link rel="stylesheet" href="/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="/css/style.css" />
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
 	</head>
 
 	<body>
@@ -12,6 +15,7 @@
 			<header>
 				<div class="container">
 					<h1>Alex O'Callaghan</h1>
+					<h2>computer science undergraduate</h2>
 				</div>
 			</header>
 			<nav>
