Added meta keywords and description to each page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>{{ page.title }}</title>
 		<meta name="author" content="Alex O'Callaghan" />
+		<meta name="description" content="{{ page.description }}" />
+		<meta name="keywords" content="{{ page.keywords }}" />
 		<link rel="stylesheet" href="/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="/css/style.css" />
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
