--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="content-language" content="en-gb" />
 		<title>{{ page.title }}</title>
 		<meta name="author" content="Alex O'Callaghan" />
 		<meta name="description" content="{{ page.description }}" />
@@ -24,19 +27,29 @@
 		  ga('send', 'pageview');
 		</script>
 		<div class="wrapper">
-			<header>
+			<nav class="navbar navbar-default">
 				<div class="container">
-					<h1>Alex O'Callaghan</h1>
-					<h2>computer science undergraduate</h2>
-				</div>
-			</header>
-			<nav>
-				<div class="container">
-					<ul>
-						<li><a href="/">Home</a></li>
-						<li><a href="/about">About</a></li>
-						<li><a href="/projects">Projects</a></li>
-					</ul>
+					<!-- Toggle dropdown nav button and navbar brand -->
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-menu" aria-expanded="false">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="/">Alex O'Callaghan</a>
+					</div>
+
+					<!-- Navbar links -->
+					<div class="collapse navbar-collapse" id="navbar-collapse-menu">
+						<ul class="nav navbar-nav">
+							<li><a href="#top">Home</a></li>
+							<li><a href="#about">About</a></li>
+							<li><a href="#projects">Projects</a></li>
+							<li><a href="#blog">Blog</a></li>
+							<li><a href="#contact">Contact</a></li>
+						</ul>
+					</div>
 				</div>
 			</nav>
 
