--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-gb">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="content-language" content="en-gb" />
 		<title>{{ page.title }}</title>
 		<meta name="author" content="Alex O'Callaghan" />
 		<meta name="description" content="{{ page.description }}" />
