Fixed navbar links and post page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,14 @@
 ---
 layout: default
 ---
-<div id="content" class="container">
+<div class="content container">
 
-	<div id="post">
-		{{ content }}
+	{{ content }}
+
+	<div class="panel panel-default">
+		<div class="panel-body">
+			<p>Blog post by <strong>Alex O'Callaghan</strong></p>
+			<p><a href="http://twitter.com/alexocallaghan" target="_blank">Follow me on Twitter</a></p>
+		</div>
 	</div>
-
 </div>
