Added crime map, JavaScript banner and more colour

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,16 @@
 ---
 layout: default
 ---
+<div class="banner" id="top">
+
+</div>
+
+<div id="title" class="content-header">
+	<div class="container">
+		<h2>{{ page.title }} — <span class="pubDate">{{ page.pubDate }}</span></h2>
+	</div>
+</div>
+
 <div class="content container">
 
 	{{ content }}
