--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,5 +62,7 @@
 
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="/js/bootstrap.min.js"></script>
+		<script src="/js/banner.js"></script>
+		{{ page.includes }}
 	</body>
 </html>
