--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,68 +1,16 @@
 <!DOCTYPE html>
-<html lang="en-gb">
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>{{ page.title }}</title>
-		<meta name="author" content="Alex O'Callaghan" />
-		<meta name="description" content="{{ page.description }}" />
-		<meta name="keywords" content="{{ page.keywords }}" />
-		<link rel="stylesheet" href="/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="/css/style.css" />
-	</head>
+<html lang="en">
 
-	<body>
-		<!-- Google analytics tracking -->
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+{% include head.html %}
 
-		  ga('create', 'UA-67253272-1', 'auto');
-		  ga('send', 'pageview');
-		</script>
-		<div class="wrapper">
-			<nav class="navbar navbar-default">
-				<div class="container">
-					<!-- Toggle dropdown nav button and navbar brand -->
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-menu" aria-expanded="false">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<a class="navbar-brand" href="/">Alex O'Callaghan</a>
-					</div>
+<body>
 
-					<!-- Navbar links -->
-					<div class="collapse navbar-collapse" id="navbar-collapse-menu">
-						<ul class="nav navbar-nav">
-							<li><a href="/#top">Home</a></li>
-							<li><a href="/#about">About</a></li>
-							<li><a href="/#projects">Projects</a></li>
-							<li><a href="/#blog">Blog</a></li>
-							<li><a href="/#contact">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
+    {% include nav.html %}
 
-			{{ content }}
+    {{ content }}
 
-			<div class="push"></div>
-		</div>
-		<footer>
-			<div class="container">
-				Copyright &copy; Alex O'Callaghan
-			</div>
-		</footer>
+    {% include footer.html %}
 
-		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script src="/js/bootstrap.min.js"></script>
-		<script src="/js/banner.js"></script>
-		{{ page.includes }}
-	</body>
+</body>
+
 </html>
