Some SEO changes

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,6 +2,12 @@
 layout: default
 ---
 
+{% if page.external %}
+<script type="text/javascript">
+  window.location = '{{ page.external }}';
+</script>
+{% endif %}
+
 <!-- Project Header -->
 <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
   <div class="container">
