--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,6 +49,13 @@
     </div>
 </footer>
 
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
+
 <!-- jQuery -->
 <script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
 
@@ -67,5 +74,4 @@
 
   ga('create', 'UA-67253272-1', 'auto');
   ga('send', 'pageview');
-
 </script>
