--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,6 +49,19 @@
     </div>
 </footer>
 
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Organization",
+    "name": "Alex O'Callaghan",
+    "url": "http://alexocallaghan.com",
+    "sameAs": [
+      "https://twitter.com/alexocallaghan",
+      "https://github.com/awocallaghan"
+    ]
+  }
+</script>
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
