--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ site.description }}">
+    {% if page.description %}
+      {% assign description = page.description %}
+    {% else %}
+      {% assign description = site.description %}
+    {% endif %}
+    <meta name="description" content="{{ description }}">
 
     <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 
