--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,33 +2,38 @@
 layout: default
 ---
 
-<!-- Post Header -->
-<header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <div class="post-heading">
-          <h1>{{ page.title }}</h1>
-          {% if page.subtitle %}
-            <h2 class="subheading">{{ page.subtitle }}</h2>
-          {% endif %}
-          <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}</span>
+<div itemprop="blogPost" itemscope="itemscope" itemtype="http://schema.org/BlogPosting">
+
+  <!-- Post Header -->
+  <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+          <div class="post-heading">
+            <h1 itemprop="name">{{ page.title }}</h1>
+            {% if page.subtitle %}
+              <h2 class="subheading">{{ page.subtitle }}</h2>
+            {% endif %}
+            <span class="meta">Posted by {% if page.author %}<span itemprop="author" itemscope="itemscope" itemtype="http://schema.org/Person"><meta content="http://alexocallaghan.com" itemprop="url" /><span itemprop="name">{{ page.author }}</span></span>{% else %}{{ site.title }}{% endif %} on <span itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</span></span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<!-- Post Content -->
-<article>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-			  {{ content }}
-        {% include bottom-nav.html %}
+  <!-- Post Content -->
+  <article>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+          <div itemprop="description articleBody">
+  			    {{ content }}
+          </div>
+          {% include bottom-nav.html %}
+        </div>
       </div>
     </div>
-  </div>
-</article>
+  </article>
 
+</div>
 <hr />
