--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,11 +10,11 @@ layout: default
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
           <div class="post-heading">
-            <h1 itemprop="name">{{ page.title }}</h1>
+            <h1 itemprop="name headline">{{ page.title }}</h1>
             {% if page.subtitle %}
               <h2 class="subheading">{{ page.subtitle }}</h2>
             {% endif %}
-            <span class="meta">Posted by {% if page.author %}<span itemprop="author" itemscope="itemscope" itemtype="http://schema.org/Person"><meta content="http://alexocallaghan.com" itemprop="url" /><span itemprop="name">{{ page.author }}</span></span>{% else %}{{ site.title }}{% endif %} on <span itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</span></span>
+            <span class="meta">Posted by {% if page.author %}<span itemprop="author publisher" itemscope="itemscope" itemtype="http://schema.org/Person"><meta content="http://alexocallaghan.com" itemprop="url" /><span itemprop="name">{{ page.author }}</span></span>{% else %}{{ site.title }}{% endif %} on <span itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</span></span>
           </div>
         </div>
       </div>
