--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,41 +1,38 @@
 <!-- Navigation -->
-<nav class="navbar navbar-default navbar-custom navbar-fixed-top">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
-        </div>
+<nav class="navbar navbar-toggleable-md navbar-light navbar-custom fixed-top">
+  <div class="container">
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-controls="bs-example-navbar-collapse-1" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a href="{{ site.baseurl }}/">Home</a>
-                </li>
-                <li>
-                  <a href="{{ site.baseurl }}/about">
-                    About
-                  </a>
-                </li>
-                <li>
-                  <a href="{{ site.baseurl }}/projects">
-                    Projects
-                  </a>
-                </li>
-                <!--<li>
-                  <a href="{{ site.baseurl }}/contact">
-                    Contact
-                  </a>
-                </li>-->
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="navbar-nav navbar-right">
+        <li class="nav-item">
+          <a href="{{ site.baseurl }}/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="{{ site.baseurl }}/about">
+            About
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="{{ site.baseurl }}/blog">
+            Blog
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="{{ site.baseurl }}/projects">
+            Projects
+          </a>
+        </li>
+        <!--<li>
+          <a href="{{ site.baseurl }}/contact">
+            Contact
+            </a>
+        </li>-->
+      </ul>
+    </div> <!-- /.navbar-collapse -->
+  </div><!-- /.container -->
 </nav>
