--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <!-- Post Header -->
   <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
     <div class="container">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
           <div class="post-heading">
             <h1 itemprop="name headline">{{ page.title }}</h1>
@@ -24,7 +24,7 @@ layout: default
   <!-- Post Content -->
   <article>
     <div class="container">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
           <div itemprop="description articleBody">
   			    {{ content }}
