--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -11,7 +11,7 @@ layout: default
 <!-- Project Header -->
 <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="post-heading col-md-6">
           <h1>{{ page.title }}</h1>
@@ -30,7 +30,7 @@ layout: default
 <!-- Project content -->
 <article>
   <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <section id="contents">
           <h2>Contents</h2>
