--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -42,17 +42,15 @@ hr.small {
 }
 .navbar-custom {
   background: white;
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   z-index: 3;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .navbar-custom .navbar-brand {
+  color: #333;
   font-weight: 800;
 }
-.navbar-custom .nav li a {
+.navbar-custom .navbar-nav li a {
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 800;
@@ -63,6 +61,9 @@ hr.small {
     background: transparent;
     border-bottom: 1px solid transparent;
   }
+  .navbar-custom .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  }
   .navbar-custom .navbar-brand {
     color: white;
     padding: 20px;
@@ -71,12 +72,12 @@ hr.small {
   .navbar-custom .navbar-brand:focus {
     color: rgba(255, 255, 255, 0.8);
   }
-  .navbar-custom .nav li a {
+  .navbar-custom .navbar-nav li a {
     color: white;
     padding: 20px;
   }
-  .navbar-custom .nav li a:hover,
-  .navbar-custom .nav li a:focus {
+  .navbar-custom .navbar-nav li a:hover,
+  .navbar-custom .navbar-nav li a:focus {
     color: rgba(255, 255, 255, 0.8);
   }
 }
@@ -97,7 +98,7 @@ hr.small {
   .navbar-custom.is-fixed {
     /* when the user scrolls down, we hide the header right above the viewport */
     position: fixed;
-    top: -61px;
+    top: -87px;
     background-color: rgba(255, 255, 255, 0.9);
     border-bottom: 1px solid #f2f2f2;
     -webkit-transition: -webkit-transform 0.3s;
@@ -111,11 +112,11 @@ hr.small {
   .navbar-custom.is-fixed .navbar-brand:focus {
     color: #0085a1;
   }
-  .navbar-custom.is-fixed .nav li a {
+  .navbar-custom.is-fixed .navbar-nav li a {
     color: #404040;
   }
-  .navbar-custom.is-fixed .nav li a:hover,
-  .navbar-custom.is-fixed .nav li a:focus {
+  .navbar-custom.is-fixed .navbar-nav li a:hover,
+  .navbar-custom.is-fixed .navbar-nav li a:focus {
     color: #0085a1;
   }
   .navbar-custom.is-visible {
