Small tweaks to projects

--- a/_includes/bottom-nav.html
+++ b/_includes/bottom-nav.html
@@ -1,5 +1,5 @@
 <hr />
-<ul class="pager">
+<ul class="pager row justify-content-center">
     {% if page.previous.url %}
     <li class="previous">
         <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">&larr; Previous</a>
