--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -9,11 +9,11 @@ layout: default
 {% endif %}
 
 <!-- Project Header -->
-<header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
+<header class="intro-header intro-header--small" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <div class="post-heading col-md-6">
+        <div class="post-heading text-center">
           <h1>{{ page.title }}</h1>
           <h2 class="subheading">{{ page.description }}</h2>
         </div>
