--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{ "/css/bootstrap4.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
 
     <!-- Tether.io CSS -->
     <link rel="stylesheet" href="{{ "/css/tether.min.css" | prepend: site.baseurl }}">
