--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -81,6 +81,13 @@
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
 
+<!-- Custom JavaScript -->
+{% if page.scripts %}
+  {% for script in page.scripts %}
+    <script src="{{ script | prepend: site.baseurl }}"></script>
+  {% endfor %}
+{% endif %}
+
 <!-- Google Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
