--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -63,6 +63,9 @@ hr.small {
 	width: 100%;
 	z-index: 3;
 	.sans-serif;
+	.container {
+		width: 100%;
+	}
 	.navbar-brand {
 		color: #333;
 		font-weight: 800;
