--- a/_includes/footer-local.html
+++ b/_includes/footer-local.html
@@ -69,23 +69,21 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 
-<!-- Common JavaScript -->
-<script src="{{ "/js/common.min.js " | prepend: site.baseurl }}"></script>
+<!-- jQuery -->
+<script src="{{ "/js/jquery.min.js " | prepend: site.baseurl }}"></script>
 
+<!-- Tether.io JavaScript -->
+<script src="{{ "/js/tether.min.js" | prepend: site.baseurl }}"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="{{ "/js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
+
+<!-- Custom Theme JavaScript -->
+<script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
+
+<!-- Custom JavaScript -->
 {% if page.scripts %}
-<!-- Custom JavaScript per page -->
   {% for script in page.scripts %}
     <script src="{{ script | prepend: site.baseurl }}"></script>
   {% endfor %}
-  
 {% endif %}
-<!-- Google Analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-67253272-1', 'auto');
-  ga('send', 'pageview');
-</script>
