Optimized  CSS delivery

--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -164,8 +164,11 @@ hr.small {
 }
 
 // Header
-
+.intro-header:after {
+	display: none;
+}
 .intro-header {
+	height: auto !important;
 	background: no-repeat center center;
 	background-color: @gray;
 	background-attachment: scroll;
