--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,68 @@
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-    <!-- All CSS -->
-    <link rel="stylesheet" href="{{ "/css/style.min.css" | prepend: site.baseurl }}" />
+    <!-- Minimal CSS -->
+    <style>
+      body {
+        margin: 0;
+      }
+      .navbar-custom {
+        display: none;
+      }
+      .container {
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 100%;
+      }
+      .intro-header {
+        background: no-repeat center center;
+        background-attachment: scroll;
+        background-size: cover;
+        transition: height 0.5s ease-in-out;
+      }
+      .intro-header .site-heading,
+      .intro-header .post-heading,
+      .intro-header .page-heading {
+        text-align: center;
+        padding: 100px 0 50px;
+        color: white;
+      }
+      h1 {
+        font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+        font-weight: 800;
+        line-height: 1.1;
+        margin-bottom: .5rem;
+      }
+      hr.small {
+        max-width: 100px;
+        margin: 15px auto;
+        border-top: 1px solid rgba(0,0,0,.1);
+        border-width: 4px;
+        border-color: white;
+      }
+      .intro-header .subheading {
+        font-size: 24px;
+        line-height: 1.1;
+        font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+        font-weight: 300;
+        magin: 10px 0 0;
+      }
+      @media only screen and (min-width: 768px) {
+        .intro-header .site-heading,
+        .intro-header .post-heading,
+        .intro-header .page-heading {
+          padding: 150px 0;
+        }
+        .intro-header h1 {
+          font-size: 80px;
+        }
+      }
+      .intro-header:after {
+        content: '';
+        display: block;
+        background-color: white;
+        height: 100vh;
+      }
+    </style>
 </head>
