--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -133,7 +133,11 @@ hr.small {
     transform: translate3d(0, 100%, 0);
   }
 }
+.intro-header:after {
+  display: none;
+}
 .intro-header {
+  height: auto !important;
   background: no-repeat center center;
   background-color: #808080;
   background-attachment: scroll;
