--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -32,6 +32,7 @@ layout: default
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+        {% if page.sections %}
         <section id="contents">
           <h2>Contents</h2>
           <ol>
@@ -40,6 +41,7 @@ layout: default
             {% endfor %}
           </ol>
         </section>
+        {% endif %}
         {{ content }}
         {% include bottom-nav.html %}
       </div>
