--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -98,6 +98,7 @@
   {% endfor %}
 
 {% endif %}
+{% if jekyll.environment == 'production' %}
 <!-- Google Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -108,3 +109,4 @@
   ga('create', 'UA-67253272-1', 'auto');
   ga('send', 'pageview');
 </script>
+{% endif %}
