--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% include head.html %}
+{% include layout/head.html %}
 
 <body>
 
-    {% include nav.html %}
+    {% include layout/nav.html %}
 
     {{ content }}
 
-    {% include footer.html %}
-    
+    {% include layout/footer.html %}
+
 </body>
 
 </html>
