--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,39 +1,8 @@
 ---
-layout: default
+layout: page
+type: 'post'
 ---
-
-<div itemprop="blogPost" itemscope="itemscope" itemtype="http://schema.org/BlogPosting">
-
-  <!-- Post Header -->
-  <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <div class="post-heading">
-            <h1 itemprop="name headline">{{ page.title }}</h1>
-            {% if page.subtitle %}
-              <h2 class="subheading">{{ page.subtitle }}</h2>
-            {% endif %}
-            <span class="meta">Posted by {% if page.author %}<span itemprop="author publisher" itemscope="itemscope" itemtype="http://schema.org/Person"><meta content="http://alexocallaghan.com" itemprop="url" /><span itemprop="name">{{ page.author }}</span></span>{% else %}{{ site.title }}{% endif %} on <span itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</span></span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <!-- Post Content -->
-  <article>
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <div itemprop="description articleBody">
-  			    {{ content }}
-          </div>
-          {% include bottom-nav.html %}
-        </div>
-      </div>
-    </div>
-  </article>
-
+<div itemprop="description articleBody">
+  {{ content }}
 </div>
-<hr />
+{% include post/bottom-nav.html %}
