--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -32,9 +32,9 @@ layout: default
 
 <!-- Main Content -->
 {% if layout.type == 'post' %}<article>{% endif %}
-<div id="content" class="container">
+<div id="content" class="container-fluid">
 	<div class="row justify-content-center">
-		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    <div class="col-lg-offset-2 col-md-11 col-md-offset-1">
       {{ content }}
 		</div>
 	</div>
