--- a/_includes/post/post-summary.html
+++ b/_includes/post/post-summary.html
@@ -1,14 +1,15 @@
 <div class="post-preview container">
+  <a href="{{ post.url | prepend: site.baseurl }}">
   {% if post.header-img %}
   <div class="row">
-    <div class="col-4">
+    <div class="post-preview-img col-12 col-md-4">
       <img class="img-fluid" src="/{{ post.header-img | prepend: site.baseurl }}" alt="{{ post.title }}" />
     </div>
-    <div class="col-8">
+    <div class="post-preview-content col-12 col-md-8">
   {% else %}
-  <div class="col-12">
+  <div class="post-preview-content col-12">
   {% endif %}
-    <a href="{{ post.url | prepend: site.baseurl }}">
+    <!--<a href="{{ post.url | prepend: site.baseurl }}">-->
         <h4 class="post-title">{{ post.title }}
         </h4>
         {% if post.subtitle %}
@@ -16,9 +17,10 @@
             {{ post.subtitle }}
         </h5>
         {% endif %}
-    </a>
+    <!--</a>-->
     <p class="post-meta">Posted by {% if post.author %}{{ post.author }}{% else %}{{ site.title }}{% endif %} on {{ post.date | date: "%B %-d, %Y" }}</p>
   </div>
   {% if post.header-img %}</div>{% endif %}
+  </a>
 </div>
 <hr>
