--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -1,539 +1,28 @@
+// LESS variables + mixins
 @import "variables.less";
 @import "mixins.less";
 
 // Global Components
-
-body {
-	.serif;
-	font-size: 20px;
-	color: @gray-dark;
-}
-
-// -- Typography
-
-p {
-	line-height: 1.5;
-	margin: 30px 0;
-	a {
-		text-decoration: underline;
-	}
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	.sans-serif;
-	font-weight: 800;
-}
-h2 {
-	margin-bottom: 1.5rem;
-}
-
-a {
-	color: @gray-dark;
-	&:hover,
-	&:focus {
-		color: @brand-primary;
-	}
-}
-
-a img {
-	&:hover,
-	&:focus {
-		cursor: zoom-in;
-	}
-}
-
-blockquote {
-	color: @gray;
-	font-style: italic;
-}
-
-hr {
-	// Undo hide
-	display: block;
-}
-hr.small {
-	max-width: 100px;
-	margin: 15px auto;
-	border-width: 4px;
-	border-color: white;
-}
-
+@import "global.less";
+// Typography
+@import "typography.less";
 // Navigation
-
-.navbar-custom {
-	background: white;
-	width: 100%;
-	z-index: 3;
-	.sans-serif;
-	.container {
-		width: 100%;
-	}
-	.navbar-brand {
-		color: #333;
-		font-weight: 800;
-		@media only screen and (max-width: 991px) {
-			padding-left: 15px;
-		}
-	}
-	.navbar-nav {
-		li {
-			a {
-				text-transform: uppercase;
-				font-size: 12px;
-				font-weight: 800;
-				letter-spacing: 1px;
-				&:hover {
-					text-decoration: none;
-				}
-			}
-		}
-	}
-	@media only screen and (min-width: 992px) {
-		background: transparent;
-		border-bottom: 1px solid transparent;
-		-webkit-transition: background-color 0.3s;
-		-moz-transition: background-color 0.3s;
-		transition: background-color 0.3s;
-		/* Force Hardware Acceleration in WebKit */
-		-webkit-transform: translate3d(0, 0, 0);
-		-moz-transform: translate3d(0, 0, 0);
-		-ms-transform: translate3d(0, 0, 0);
-		-o-transform: translate3d(0, 0, 0);
-		transform: translate3d(0, 0, 0);
-		-webkit-backface-visibility: hidden;
-		backface-visibility: hidden;
-
-		.navbar-toggler {
-			border-color: transparent;
-		}
-		.navbar-toggler-icon {
-			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.75)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-		}
-		.navbar-brand {
-			color: white;
-			padding: 20px;
-			&:hover,
-			&:focus {
-				color: @white-faded;
-			}
-		}
-		.navbar-nav {
-			li {
-				a {
-					position: relative;
-					top: 10px;
-					color: white;
-					padding: 20px;
-					&:hover,
-					&:focus {
-						color: @white-faded;
-					}
-					&:after {
-						content: '';
-						display: block;
-						margin: 0 auto;
-						max-width: 25%;
-						transition: max-width 0.5s ease-in-out;
-						height: 2px;
-						background-color: white;
-					}
-					&:hover:after {
-						max-width: 50%;
-					}
-				}
-			}
-		}
-		&.is-fixed {
-			/* when the user scrolls down, we hide the header right above the viewport */
-			position: fixed;
-			top: -87px;
-			background-color: fade(white, 90%);
-			border-bottom: 1px solid darken(white, 5%);
-			-webkit-transition: -webkit-transform 0.3s;
-			-moz-transition: -moz-transform 0.3s;
-			transition: transform 0.3s;
-			.navbar-toggler-icon {
-				background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-			}
-			.navbar-brand {
-				color: @gray-dark;
-				&:hover,
-				&:focus {
-					color: @brand-primary;
-				}
-			}
-			.navbar-nav {
-				li {
-					a {
-						color: @gray-dark;
-						&:hover,
-						&:focus {
-							color: @brand-primary;
-						}
-						&:after {
-							background-color: @brand-primary;
-						}
-					}
-				}
-			}
-		}
-		&.is-visible {
-			/* if the user changes the scrolling direction, we show the header */
-			-webkit-transform: translate3d(0, 100%, 0);
-			-moz-transform: translate3d(0, 100%, 0);
-			-ms-transform: translate3d(0, 100%, 0);
-			-o-transform: translate3d(0, 100%, 0);
-			transform: translate3d(0, 100%, 0);
-		}
-	}
-}
-// Right align nav items on desktop
-@media only screen and (min-width: 992px) {
-	.navbar-toggleable-md .navbar-collapse {
-		justify-content: flex-end;
-	}
-}
-
-// Header
-.intro-header {
-	min-height: 10px;
-	background: no-repeat center center;
-	background-color: @gray;
-	background-attachment: scroll;
-	.background-cover;
-	// NOTE: Background images are set within the HTML using inline CSS!
-	margin-bottom: 50px;
-	.site-heading,
-	.post-heading,
-	.page-heading {
-		padding: 100px 0 50px;
-		color: white;
-		@media only screen and (min-width: 768px) {
-			padding: 150px 0;
-		}
-	}
-	.site-heading,
-	.page-heading {
-		text-align: center;
-		h1 {
-			margin-top: 0;
-			font-size: 50px;
-			text-shadow: 2px 2px rgba(0,0,0,0.4);
-		}
-		.subheading {
-			font-size: 24px;
-			line-height: 1.1,
-			display: block;
-			.sans-serif;
-			font-weight: 300;
-			margin: 10px 0 0;
-		}
-		@media only screen and (min-width: 768px) {
-			h1 {
-				font-size: 80px;
-			}
-		}
-	}
-	.post-heading {
-		h1 {
-			font-size: 35px;
-		}
-		.subheading,
-		.meta {
-			line-height: 1.1;
-			display: block;
-		}
-		.subheading {
-			.sans-serif;
-			font-size: 24px;
-			margin: 10px 0 30px;
-			font-weight: 600;
-		}
-		.meta {
-			.serif;
-			font-style: italic;
-			font-weight: 300;
-			font-size: 20px;
-			a {
-				color: white;
-			}
-		}
-		@media only screen and (min-width: 768px) {
-			h1 {
-				font-size: 55px;
-			}
-			.subheading {
-				font-size: 30px;
-			}
-		}
-	}
-}
-
+@import "navbar.less";
+// Intro header
+@import "intro-header.less";
 // Content
-#content {
-	display: block;
-}
-// Home page content
-@media only screen and (max-width: 517px) {
-	#home-content {
-		text-align: center;
-	}
-}
-
-// Post Preview Pages
-
-.post-preview {
-	> a {
-		color: @gray-dark;
-		&:hover,
-		&:focus {
-			text-decoration: none;
-			color: @brand-primary;
-		}
-		> .post-title {
-			font-size: 30px;
-			margin-top: 30px;
-			margin-bottom: 10px;
-		}
-		> .post-subtitle {
-			margin: 0;
-			font-weight: 300;
-			margin-bottom: 10px;
-		}
-	}
-	> .post-meta {
-		color: @gray;
-		font-size: 18px;
-		font-style: italic;
-		margin-top: 0;
-		> a {
-			text-decoration: none;
-			color: @gray-dark;
-			&:hover,
-			&:focus {
-				color: @brand-primary;
-				text-decoration: underline;
-			}
-		}
-	}
-}
-
+@import "content.less";
+// Posts
+@import "posts.less";
 // Sections
-
-.section-heading {
-	font-size: 36px;
-	margin-top: 60px;
-	font-weight: 700;
-}
-
-.caption {
-	text-align: center;
-	font-size: 14px;
-	padding: 10px;
-	font-style: italic;
-	margin: 0;
-	display: block;
-	border-bottom-right-radius: 5px;
-	border-bottom-left-radius: 5px;
-}
-
-footer {
-	padding: 50px 0 65px;
-	.list-inline {
-		margin: 0;
-		padding: 0;
-	}
-	.copyright {
-		font-size: 14px;
-		text-align: center;
-		margin-bottom: 0;
-	}
-}
-
+@import "sections.less";
+// Footer
+@import "footer.less";
 // Contact Form Styles
-
-.floating-label-form-group {
-	font-size: 14px;
-	position: relative;
-	margin-bottom: 0;
-	padding-bottom: 0.5em;
-	border-bottom: 1px solid @gray-light;
-	input,
-	textarea {
-		z-index: 1;
-		position: relative;
-		padding-right: 0;
-		padding-left: 0;
-		border: none;
-		border-radius: 0;
-		font-size: 1.5em;
-		background: none;
-		box-shadow: none !important;
-		resize: none;
-	}
-	label {
-		display: block;
-		z-index: 0;
-		position: relative;
-		top: 2em;
-		margin: 0;
-		font-size: 0.85em;
-		line-height: 1.764705882em;
-		vertical-align: middle;
-		vertical-align: baseline;
-		opacity: 0;
-		-webkit-transition: top 0.3s ease,opacity 0.3s ease;
-		-moz-transition: top 0.3s ease,opacity 0.3s ease;
-		-ms-transition: top 0.3s ease,opacity 0.3s ease;
-		transition: top 0.3s ease,opacity 0.3s ease;
-	}
-	&::not(:first-child) {
-		padding-left: 14px;
-		border-left: 1px solid @gray-light;
-	}
-}
-
-.floating-label-form-group-with-value {
-	label {
-		top: 0;
-		opacity: 1;
-	}
-}
-
-.floating-label-form-group-with-focus {
-	label {
-		color: @brand-primary;
-	}
-}
-
-form .row:first-child .floating-label-form-group {
-	border-top: 1px solid @gray-light;
-}
-
+@import "form.less";
 // Button Styles
-
-.btn {
-	.sans-serif;
-	text-transform: uppercase;
-	font-size: 14px;
-	font-weight: 800;
-	letter-spacing: 1px;
-	border-radius: 0;
-	padding: 15px 25px;
-}
-
-.btn-lg {
-	font-size: 16px;
-	padding: 25px 35px;
-}
-
-.btn-default {
-	&:hover,
-	&:focus {
-		background-color: @brand-primary;
-		border: 1px solid @brand-primary;
-		color: white;
-	}
-}
-
-// Pager Styling
-
-.pager {
-
-	margin: 20px 0 0;
-	list-style: none;
-
-	li {
-		> a,
-		> span {
-			.sans-serif;
-			text-transform: uppercase;
-			font-size: 14px;
-			font-weight: 800;
-			letter-spacing: 1px;
-			padding: 10px 5px;
-			background-color: white;
-			border-radius: 0;
-			@media only screen and (min-width: 768px) {
-				font-size: 14px;
-				padding: 15px 25px;
-			}
-		}
-
-		> a:hover,
-		> a:focus {
-			color: white;
-			background-color: @brand-primary;
-			border: 1px solid @brand-primary;
-		}
-	}
-
-	.disabled {
-		> a,
-		> a:hover,
-		> a:focus,
-		> span {
-			color: @gray;
-			background-color: @gray-dark;
-			cursor: not-allowed;
-		}
-	}
-}
-
-// -- Highlight Color Customization
-
-::-moz-selection {
-	color: white;
-	text-shadow: none;
-	background: @brand-primary;
-}
-
-::selection {
-	color: white;
-	text-shadow: none;
-	background: @brand-primary;
-}
-
-img::selection {
-	color: white;
-	background: transparent;
-}
-
-img::-moz-selection {
-	color: white;
-	background: transparent;
-}
-
-body {
-	webkit-tap-highlight-color: @brand-primary;
-}
-
-// -- Projects page
-.filter-toggler {
-	position: relative;
-	top: -.25em;
-	padding-left: 1em;
-	font-size: .5em;
-}
-.filter-toggler:link,
-.filter-toggler:visited,
-.filter-toggler.collapsed:active
-{
-	text-decoration: underline;
-	color: red;
-}
-.filter-toggler.collapsed:link,
-.filter-toggler.collapsed:visited,
-.filter-toggler.collapsed:active
-{
-	color: #404040;
-	text-decoration: none;
-}
-#projects-filters .btn {
-	margin: 2px;
-}
+@import "buttons.less";
+// Highlight Color Customization
+@import "highlight.less";
+// Projects page
+@import "projects.less";
