--- a/_includes/post/post-summary.html
+++ b/_includes/post/post-summary.html
@@ -3,7 +3,7 @@
   {% if post.header-img %}
   <div class="row">
     <div class="post-preview-img col-12 col-md-4">
-      <img class="img-fluid" src="/{{ post.header-img | prepend: site.baseurl }}" alt="{{ post.title }}" />
+      <img class="img-fluid" src="{{ post.header-img | prepend: site.baseurl | prepend: site.url }}" alt="{{ post.title }}" />
     </div>
     <div class="post-preview-content col-12 col-md-8">
   {% else %}
