--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
 {% endif %}
 
 <!-- Page Header -->
-<header class="intro-header" style="background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.75)),url('{% if page.header-img %}/{{ page.header-img | prepend: site.baseurl }}{% else %}/{{ site.header-img | prepend: site.baseurl }}{% endif %}') #000; background-size: cover; background-position: center; background-attachment: fixed;">
+<header class="intro-header" style="background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.75)),url('{% if page.header-img %}{{ page.header-img | prepend: site.baseurl | prepend: site.url }}{% else %}{{ site.header-img | prepend: site.baseurl | prepend: site.url }}{% endif %}') #000; background-size: cover; background-position: center; background-attachment: fixed;">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
