Remove HTTP protocol from url to support HTTPS

--- a/_includes/layout/head.html
+++ b/_includes/layout/head.html
@@ -37,6 +37,9 @@
     <style>
       body {
         margin: 0;
+        color: #404040;
+        font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+        line-height: 1.5;
       }
       hr {
         display: none;
@@ -181,10 +184,6 @@
       }
       a:hover, a:focus {
         color: #0085A1;
-      }
-      body {
-        font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
-        line-height: 1.1;
       }
       p {
         line-height: 1.5;
