--- a/_sass/font-awesome/font-awesome.scss
+++ b/_sass/font-awesome/font-awesome.scss
@@ -8,11 +8,12 @@
 @import "path";
 @import "core";
 @import "larger";
-@import "fixed-width";
+/*@import "fixed-width";
 @import "list";
 @import "bordered-pulled";
 @import "animated";
 @import "rotated-flipped";
+*/
 @import "stacked";
 @import "icons";
 @import "screen-reader";
