--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -2,9 +2,5 @@ body {
 	@include serif;
 	font-size: 20px;
 	color: $gray-dark;
-}
-
-/* Hide all .css-loading class elements when CSS has loaded */
-.css-loading {
-	display: none !important;
+	margin: 0;
 }
