--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,8 @@
 ---
 ---
 // Vendor
-@import "bootstrap/bootstrap";
+//@import "bootstrap/bootstrap";
+@import "bootstrap-lite";
 @import "font-awesome/font-awesome";
 
 // LESS variables + mixins
@@ -9,13 +10,13 @@
 @import "mixins";
 
 // Global Components
-@import "global";
+//@import "global";
 // Typography
-@import "typography";
+//@import "typography";
 // Navigation
-@import "navbar";
+//@import "navbar";
 // Intro header
-@import "intro-header";
+//@import "intro-header";
 // Content
 @import "content";
 // Posts
