--- a/_sass/font-awesome/_icons.scss
+++ b/_sass/font-awesome/_icons.scss
@@ -1,6 +1,7 @@
 /* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
    readers do not read off random characters that represent icons */
 
+/*
 .#{$fa-css-prefix}-glass:before { content: $fa-var-glass; }
 .#{$fa-css-prefix}-music:before { content: $fa-var-music; }
 .#{$fa-css-prefix}-search:before { content: $fa-var-search; }
@@ -157,14 +158,20 @@
 .#{$fa-css-prefix}-square-o:before { content: $fa-var-square-o; }
 .#{$fa-css-prefix}-bookmark-o:before { content: $fa-var-bookmark-o; }
 .#{$fa-css-prefix}-phone-square:before { content: $fa-var-phone-square; }
+*/
 .#{$fa-css-prefix}-twitter:before { content: $fa-var-twitter; }
+/*
 .#{$fa-css-prefix}-facebook-f:before,
 .#{$fa-css-prefix}-facebook:before { content: $fa-var-facebook; }
+*/
 .#{$fa-css-prefix}-github:before { content: $fa-var-github; }
+/*
 .#{$fa-css-prefix}-unlock:before { content: $fa-var-unlock; }
 .#{$fa-css-prefix}-credit-card:before { content: $fa-var-credit-card; }
 .#{$fa-css-prefix}-feed:before,
+*/
 .#{$fa-css-prefix}-rss:before { content: $fa-var-rss; }
+/*
 .#{$fa-css-prefix}-hdd-o:before { content: $fa-var-hdd-o; }
 .#{$fa-css-prefix}-bullhorn:before { content: $fa-var-bullhorn; }
 .#{$fa-css-prefix}-bell:before { content: $fa-var-bell; }
@@ -275,7 +282,9 @@
 .#{$fa-css-prefix}-quote-left:before { content: $fa-var-quote-left; }
 .#{$fa-css-prefix}-quote-right:before { content: $fa-var-quote-right; }
 .#{$fa-css-prefix}-spinner:before { content: $fa-var-spinner; }
+*/
 .#{$fa-css-prefix}-circle:before { content: $fa-var-circle; }
+/*
 .#{$fa-css-prefix}-mail-reply:before,
 .#{$fa-css-prefix}-reply:before { content: $fa-var-reply; }
 .#{$fa-css-prefix}-github-alt:before { content: $fa-var-github-alt; }
@@ -787,3 +796,4 @@
 .#{$fa-css-prefix}-superpowers:before { content: $fa-var-superpowers; }
 .#{$fa-css-prefix}-wpexplorer:before { content: $fa-var-wpexplorer; }
 .#{$fa-css-prefix}-meetup:before { content: $fa-var-meetup; }
+*/
